fix for photo uploader on firefox.
thanks to user bla for the bug report https://makr.io/p/3336#

--- a/app/assets/stylesheets/new_styles/_composer.scss
+++ b/app/assets/stylesheets/new_styles/_composer.scss
@@ -220,5 +220,6 @@ input[type="image"] {
     left: 0;
     height:100%;
     cursor : pointer;
+    margin-left: -30px;
   }
 }
